fixed text wrap around issue

--- a/eyciSite/code/css/orderStyle.css
+++ b/eyciSite/code/css/orderStyle.css
@@ -65,6 +65,8 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     width: 250px;
     flex: 0 0 250px;
+    white-space: normal;
+    word-wrap: break-word;
 }
 
 .item img {
@@ -163,6 +165,8 @@ footer {
         flex: 0 0 100%;
         padding: 0px;
         border-radius: 8px;
+        white-space: normal;
+        word-wrap: break-word;
     }
 
     .item img {
